# Syphon-OpenGL-3.2-core

./: CMakeLists.txt
src/: SyphonClientConnectionManager.m  SyphonMachMessageReceiver.m  SyphonMachMessageSender.m
